unpackaged/main/default/objects/Lead/fields/Firm_Name_Keyword__c.field-meta.xml
<CustomField>
    <fullName>Firm_Name_Keyword__c</fullName>
    <description>TRUE if lead company name has a keyword in it</description>
    <formula>IF(
OR(
CONTAINS( LOWER(Company), &quot;law&quot;),
CONTAINS( LOWER(Company), &quot;firm&quot;),
CONTAINS( LOWER(Company), &quot;attorney&quot;),
CONTAINS( LOWER(Company), &quot;legal&quot;),
CONTAINS( LOWER(Company), &quot;office&quot;),
CONTAINS( LOWER(Company), &quot;lawyer&quot;),
CONTAINS( LOWER(Company), &quot;pllc&quot;),
CONTAINS( LOWER(Company), &quot;plc&quot;),
CONTAINS( LOWER(Company), &quot;lawyer&quot;),
CONTAINS( LOWER(Company), &quot;mediation&quot;),
CONTAINS( LOWER(Company), &quot;p.a.&quot;),
CONTAINS( LOWER(Company), &quot;pc&quot;),
CONTAINS( LOWER(Company), &quot;court&quot;),
CONTAINS( LOWER(Company), &quot;group&quot;),
CONTAINS( LOWER(Company), &quot;consulting&quot;),
CONTAINS( LOWER(Company), &quot;esq&quot;),
CONTAINS( LOWER(Company), &quot;esquire&quot;),
CONTAINS( LOWER(Company), &quot;partners&quot;),
CONTAINS( LOWER(Company), &quot;associate&quot;),
CONTAINS( LOWER(Company), &quot;llc&quot;),
CONTAINS( LOWER(Company), &quot;inc&quot;),
CONTAINS( LOWER(Company), &quot;services&quot;)
),

TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>TRUE if lead company name has a keyword in it</inlineHelpText>
    <label>Firm Name Keyword</label>
    <type>Checkbox</type>
</CustomField>