unpackaged/main/default/objects/Lead/fields/First_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Created_Date__c</fullName>
    <inlineHelpText>Used as something of a checksum against the lead createddate in order to time how long the record takes to integrate</inlineHelpText>
    <label>First Created Date</label>
    <type>DateTime</type>
</CustomField>