unpackaged/main/default/objects/Lead/fields/First_MQL_Date__c.field-meta.xml
<CustomField>
    <fullName>First_MQL_Date__c</fullName>
    <description>This is the date/time that the Lead or Contact first became an MQL.</description>
    <label>First MQL Date</label>
    <type>DateTime</type>
</CustomField>