unpackaged/main/default/objects/Lead/fields/First_MQL_Product_Tier__c.field-meta.xml
<CustomField>
    <fullName>First_MQL_Product_Tier__c</fullName>
    <label>First MQL Product Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line_Tier</valueSetName>
    </valueSet>
</CustomField>