unpackaged/main/default/objects/Lead/fields/GCLID__c.field-meta.xml
<CustomField>
    <fullName>GCLID__c</fullName>
    <description>R166115, #4730</description>
    <label>GCLID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>