unpackaged/main/default/objects/Lead/fields/Handraiser_Form__c.field-meta.xml
<CustomField>
    <fullName>Handraiser_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated by Marketo</description>
    <label>Handraiser Form</label>
    <type>Checkbox</type>
</CustomField>