unpackaged/main/default/objects/Lead/fields/Has_Referral_with_Paymnts_Entrprse_Acct__c.field-meta.xml
<CustomField>
    <fullName>Has_Referral_with_Paymnts_Entrprse_Acct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Helper field - Has a referral record that is Payments Enterprise Account = True</description>
    <label>Has Referral with Paymnts Entrprse Acct</label>
    <type>Checkbox</type>
</CustomField>