unpackaged/main/default/objects/Lead/fields/Has_Referral_with_Prohibited_Status__c.field-meta.xml
<CustomField>
    <fullName>Has_Referral_with_Prohibited_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine if Lead has a referral with a prohibited selling status.  Updated via a flow.</description>
    <label>Has Referral with Prohibited Status</label>
    <type>Checkbox</type>
</CustomField>