unpackaged/main/default/objects/Lead/fields/Has_Referral_with_Prohibited_Status_Time__c.field-meta.xml
<CustomField>
    <fullName>Has_Referral_with_Prohibited_Status_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has a referral with prohibited status Time Bound. Updated via a flow.</description>
    <label>Has Referral with Prohibited Status Time</label>
    <type>Checkbox</type>
</CustomField>