unpackaged/main/default/objects/Lead/fields/Inbound_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Request_Date__c</fullName>
    <description>This is populated by Marketo and is used to trigger Inbound Request records in Salesforce, which are used in attribution reporting.</description>
    <label>Inbound Request Date</label>
    <type>DateTime</type>
</CustomField>