unpackaged/main/default/objects/Lead/fields/Inbound_Request_Product_Tier__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Request_Product_Tier__c</fullName>
    <label>Inbound Request Product Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line_Tier</valueSetName>
    </valueSet>
</CustomField>