unpackaged/main/default/objects/Lead/fields/Inbound_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inbound Scheduled</label>
    <type>Checkbox</type>
</CustomField>