unpackaged/main/default/objects/Lead/fields/Intake_Solution__c.field-meta.xml
<CustomField>
    <fullName>Intake_Solution__c</fullName>
    <label>Intake Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Intake_Solution</valueSetName>
    </valueSet>
</CustomField>