unpackaged/main/default/objects/Lead/fields/Last_Activity_User_Role__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_User_Role__c</fullName>
    <label>Last Activity User/Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>