unpackaged/main/default/objects/Lead/fields/Last_Assigned_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Last_Assigned_Owner_Role__c</fullName>
    <description>R1920632</description>
    <label>Last Assigned Owner Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>