unpackaged/main/default/objects/Lead/fields/Last_MQL_Date_Changed_At__c.field-meta.xml
<CustomField>
    <fullName>Last_MQL_Date_Changed_At__c</fullName>
    <label>Last MQL Date Changed At</label>
    <type>DateTime</type>
</CustomField>