unpackaged/main/default/objects/Lead/fields/Last_MQL_During_Central_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Last_MQL_During_Central_Business_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Flow evalutes whether the Contact: Last MQL Date falls within business hours (holidays included)</inlineHelpText>
    <label>Last MQL During Central Business Hours</label>
    <type>Checkbox</type>
</CustomField>