unpackaged/main/default/objects/Lead/fields/Last_MQL_Product_Tier__c.field-meta.xml
<CustomField>
    <fullName>Last_MQL_Product_Tier__c</fullName>
    <label>Last MQL Product Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line_Tier</valueSetName>
    </valueSet>
</CustomField>