unpackaged/main/default/objects/Lead/fields/Last_MQL_Score__c.field-meta.xml
<CustomField>
    <fullName>Last_MQL_Score__c</fullName>
    <description>This is the Lead or Contact’s score at the time they last became an MQL.</description>
    <label>Last MQL Score</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>