unpackaged/main/default/objects/Lead/fields/Last_MQL_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_MQL_Status__c</fullName>
    <label>Last MQL Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MQL_Status</valueSetName>
    </valueSet>
</CustomField>