unpackaged/main/default/objects/Lead/fields/Last_Touch_Program__c.field-meta.xml
<CustomField>
    <fullName>Last_Touch_Program__c</fullName>
    <description>last marketing campaign program that prospect was in</description>
    <inlineHelpText>last marketing campaign program that prospect was in</inlineHelpText>
    <label>Last Touch Program</label>
    <length>200</length>
    <type>Text</type>
</CustomField>