unpackaged/main/default/objects/Lead/fields/Last_Year_QTD_Converted_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_QTD_Converted_Date__c</fullName>
    <description>R164026</description>
    <formula>IF(CEILING(MONTH(TODAY())/3) = CEILING(MONTH(ConvertedDate)/3) &amp;&amp; 
DATE(YEAR(ConvertedDate)+1, MONTH(ConvertedDate), DAY(ConvertedDate))&lt;= TODAY(), 
True, False)</formula>
    <label>Last Year QTD Converted Date</label>
    <type>Checkbox</type>
</CustomField>