unpackaged/main/default/objects/Lead/fields/Last_Year_QTD_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_QTD_Created_Date__c</fullName>
    <description>R164026</description>
    <formula>IF(CEILING(MONTH(TODAY())/3) = CEILING(MONTH(DATEVALUE(CreatedDate))/3) &amp;&amp; 
DATE(YEAR(DATEVALUE(CreatedDate))+1, MONTH(DATEVALUE(CreatedDate)), DAY(DATEVALUE(CreatedDate)))&lt;= TODAY(), 
True, False)</formula>
    <label>Last Year QTD Created Date</label>
    <type>Checkbox</type>
</CustomField>