unpackaged/main/default/objects/Lead/fields/Last_Year_YTD_Converted_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_YTD_Converted_Date__c</fullName>
    <description>R164026</description>
    <formula>IF(DATE(YEAR(ConvertedDate)+1, MONTH(ConvertedDate), DAY(ConvertedDate))&lt;= TODAY()&amp;&amp; 
YEAR(TODAY())-YEAR(ConvertedDate)= 1, 
True,False)</formula>
    <label>Last Year YTD Converted Date</label>
    <type>Checkbox</type>
</CustomField>