unpackaged/main/default/objects/Lead/fields/Last_Year_YTD_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_YTD_Created_Date__c</fullName>
    <description>R164026</description>
    <formula>IF(DATE(YEAR(DATEVALUE(CreatedDate))+1, MONTH(DATEVALUE(CreatedDate)), DAY(DATEVALUE(CreatedDate)))&lt;= TODAY()&amp;&amp; 
YEAR(TODAY())-YEAR(DATEVALUE(CreatedDate))= 1, 
True,False)</formula>
    <label>Last Year YTD Created Date</label>
    <type>Checkbox</type>
</CustomField>