unpackaged/main/default/objects/Lead/fields/Lead_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_Case_Safe_ID__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Lead Casesafe ID</inlineHelpText>
    <label>Lead Case Safe ID</label>
    <type>Text</type>
</CustomField>