unpackaged/main/default/objects/Lead/fields/Lead_Channel__c.field-meta.xml
<CustomField>
    <fullName>Lead_Channel__c</fullName>
    <description>A lead channel is simply a channel or source of laeds for our business. It is used in conjunction with Lead Source for attribution reporting.</description>
    <label>Lead Channel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetName>Lead_Channel</valueSetName>
    </valueSet>
</CustomField>