unpackaged/main/default/objects/Lead/fields/Lead_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_Date__c</fullName>
    <description>Created for R152223 

DO NOT EDIT OR CHANGE FIELD, PART OF MQL LEAD CONVERSION PROCESS 
SEE FOLLOWING WORKFLOW RULE 
Update Lead Created Date Field Step 1 
https://cs42.salesforce.com/01Q560000004NEI</description>
    <formula>Datevalue( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Created Date</label>
    <type>Date</type>
</CustomField>