unpackaged/main/default/objects/Lead/fields/Lead_Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Lead_Email_Domain__c</fullName>
    <inlineHelpText>Flow will parse the Domain from the Lead Email address. If an Account is found, by matching on Email Domain + Company Name OR Phone + Company Name, linked Account will be populated.</inlineHelpText>
    <label>Lead Email Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>