unpackaged/main/default/objects/Lead/fields/Lead_Next_Step_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Next_Step_Date__c</fullName>
    <label>Lead Next Step Date</label>
    <type>Date</type>
</CustomField>