unpackaged/main/default/objects/Lead/fields/Lead_next_steps__c.field-meta.xml
<CustomField>
    <fullName>Lead_next_steps__c</fullName>
    <label>Lead Next Steps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>