unpackaged/main/default/objects/Lead/fields/Lead_Other_details__c.field-meta.xml
<CustomField>
    <fullName>Lead_Other_details__c</fullName>
    <label>Lead (Other details)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>