unpackaged/main/default/objects/Lead/fields/Lead_Owner_Formula__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Formula__c</fullName>
    <description>R166466</description>
    <formula>IF( 
ISBLANK(Owner:User.Id), /* If blank, it&#39;s a queue */ 
Owner:Queue.QueueName, 
Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner Formula</label>
    <type>Text</type>
</CustomField>