unpackaged/main/default/objects/Lead/fields/Lead_Owner_link__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_link__c</fullName>
    <formula>if(  BEGINS(OwnerId, &#39;00G&#39;), HYPERLINK(OrgURL__c + OwnerId,  Owner:Queue.QueueName ), HYPERLINK(OrgURL__c + OwnerId ,  Owner:User.FirstName +&#39; &#39;+ Owner:User.LastName))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner</label>
    <type>Text</type>
</CustomField>