unpackaged/main/default/objects/Lead/fields/Lead_Status_formula__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_formula__c</fullName>
    <formula>IF(TEXT(Status) = &quot;Converted without Opportunity&quot;, &quot;Known&quot;, TEXT(Status))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Converted without Opportunity, &quot;Known&quot;. Otherwise, Lead Status</inlineHelpText>
    <label>Lead Status (formula)</label>
    <type>Text</type>
</CustomField>