unpackaged/main/default/objects/Lead/fields/Lead_Status_MyCase__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_MyCase__c</fullName>
    <description>R1811779</description>
    <label>zz MyCase Lead Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>