unpackaged/main/default/objects/Lead/fields/Lead_Step_Last_Edited__c.field-meta.xml
<CustomField>
    <fullName>Lead_Step_Last_Edited__c</fullName>
    <description>Lead step last edited date</description>
    <label>Lead Step Last Edited</label>
    <type>Date</type>
</CustomField>