unpackaged/main/default/objects/Lead/fields/Leading_Brand_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Leading_Brand_Engagement__c</fullName>
    <label>Leading Brand Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brands</valueSetName>
    </valueSet>
</CustomField>