unpackaged/main/default/objects/Lead/fields/LeadOne__c.field-meta.xml
<CustomField>
    <fullName>LeadOne__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LeadOne</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>