unpackaged/main/default/objects/Lead/fields/Legacy_Practice_Areas__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Practice_Areas__c</fullName>
    <inlineHelpText>Displays the practice area(s) value form the legacy system that created this record</inlineHelpText>
    <label>zz Legacy Practice Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Legacy Practice Area(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>