unpackaged/main/default/objects/Lead/fields/Legacy_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Time_Zone__c</fullName>
    <inlineHelpText>Displays the timezone value that may have been in the source data during the Newco migration</inlineHelpText>
    <label>Legacy Time Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>