unpackaged/main/default/objects/Lead/fields/Linked_Account__c.field-meta.xml
<CustomField>
    <fullName>Linked_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The future would actually link the the lead to the matching Account (and possibly contact) record using the matching rules that are still being defined by Newco.  This field mapping represents a link to a Ringlead field however ringlead is not currently installed in the MyCase instance</description>
    <label>Linked Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Leads</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>