unpackaged/main/default/objects/Lead/fields/Linkedin_Ad_Name__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_Ad_Name__c</fullName>
    <label>Linkedin Ad Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>