unpackaged/main/default/objects/Lead/fields/LinkedIn_Click_ID__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Click_ID__c</fullName>
    <description>Marketing field</description>
    <label>LinkedIn Click ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>