unpackaged/main/default/objects/Lead/fields/LinkedIn_Link__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Link__c</fullName>
    <description>APM; R2026449; Edited by: Users</description>
    <label>LinkedIn Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>