unpackaged/main/default/objects/Lead/fields/Manager_Notes__c.field-meta.xml
<CustomField>
    <fullName>Manager_Notes__c</fullName>
    <label>Manager Notes</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>