unpackaged/main/default/objects/Lead/fields/Mark_Email_as_Spam__c.field-meta.xml
<CustomField>
    <fullName>Mark_Email_as_Spam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mark Email as Spam</label>
    <type>Checkbox</type>
</CustomField>