unpackaged/main/default/objects/Lead/fields/Marketo_Id__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Id__c</fullName>
    <description>Id of Lead in Marketo</description>
    <label>Marketo ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>