unpackaged/main/default/objects/Lead/fields/Marketo_Token__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Token__c</fullName>
    <label>Marketo Token</label>
    <length>64</length>
    <type>Text</type>
</CustomField>