unpackaged/main/default/objects/Lead/fields/Merge_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Merge_Contact_ID__c</fullName>
    <description>Id of Contact Lead should be merged with</description>
    <label>Merge Contact ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>