unpackaged/main/default/objects/Lead/fields/Migration_id__c.field-meta.xml
<CustomField>
    <fullName>Migration_id__c</fullName>
    <externalId>true</externalId>
    <label>Migration ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>