unpackaged/main/default/objects/Lead/fields/mkto71_Inferred_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Inferred_Postal_Code__c</fullName>
    <description>R165544</description>
    <label>Inferred Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>