unpackaged/main/default/objects/Lead/fields/mkto71_Original_Search_Engine__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Original_Search_Engine__c</fullName>
    <description>R165544</description>
    <label>Original Search Engine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>