unpackaged/main/default/objects/Lead/fields/mops_xid__c.field-meta.xml
<CustomField>
    <fullName>mops_xid__c</fullName>
    <description>Marketing Field</description>
    <label>mops_xid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>