unpackaged/main/default/objects/Lead/fields/Most_Recent_MEL_before_Opp_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_MEL_before_Opp_Program_Name__c</fullName>
    <description>R1916824</description>
    <label>Most Recent MEL before Opp Program Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>