unpackaged/main/default/objects/Lead/fields/Most_Recently_Completed_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Most_Recently_Completed_Sequence__c</fullName>
    <description>Most recently completed sequence from Outreach. Derived from the Finished Sequences field.</description>
    <label>Most Recently Completed Sequence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>