unpackaged/main/default/objects/Lead/fields/MQL_LawPay_Pro_Trial_Started_From__c.field-meta.xml
<CustomField>
    <fullName>MQL_LawPay_Pro_Trial_Started_From__c</fullName>
    <label>MQL LawPay Pro Trial Started From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MQL_LawPay_Pro_Trial_Started_From</valueSetName>
    </valueSet>
</CustomField>