unpackaged/main/default/objects/Lead/fields/MyCase_Current_Solution__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Current_Solution__c</fullName>
    <label>zz Current Solution (MyCase)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Abacus Law</fullName>
            </value>
            <value>
                <fullName>Clio</fullName>
            </value>
            <value>
                <fullName>CosmoLex</fullName>
            </value>
            <value>
                <fullName>Firm Central</fullName>
            </value>
            <value>
                <fullName>Firm Manager</fullName>
            </value>
            <value>
                <fullName>LEAP</fullName>
            </value>
            <value>
                <fullName>MyCase</fullName>
            </value>
            <value>
                <fullName>Practice Panther</fullName>
            </value>
            <value>
                <fullName>RocketMatter</fullName>
            </value>
            <value>
                <fullName>Time Matters</fullName>
            </value>
            <value>
                <fullName>Zola Suite</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Total Attorneys</fullName>
            </value>
            <value>
                <fullName>Amicus</fullName>
            </value>
            <value>
                <fullName>Abacus/Amicus</fullName>
            </value>
            <value>
                <fullName>Aderant</fullName>
            </value>
            <value>
                <fullName>Best Case</fullName>
            </value>
            <value>
                <fullName>File Vine</fullName>
            </value>
            <value>
                <fullName>Legal Files</fullName>
            </value>
            <value>
                <fullName>LexisNexis</fullName>
            </value>
            <value>
                <fullName>Needles</fullName>
            </value>
            <value>
                <fullName>No LPM Software</fullName>
            </value>
            <value>
                <fullName>Other LPM Software</fullName>
            </value>
            <value>
                <fullName>PC Law</fullName>
            </value>
            <value>
                <fullName>PracticeMaster</fullName>
            </value>
            <value>
                <fullName>Prevail</fullName>
            </value>
            <value>
                <fullName>ProLaw</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>