unpackaged/main/default/objects/Lead/fields/MyCase_Marketing_Engagement__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Marketing_Engagement__c</fullName>
    <label>MyCase Marketing Score 60 Days</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>