unpackaged/main/default/objects/Lead/fields/MyCase_Practice_Area__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Practice_Area__c</fullName>
    <label>zz Practice Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bankruptcy &amp; Debt</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Consumer Protection</fullName>
            </value>
            <value>
                <fullName>Criminal Defense</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Estate &amp; Trust</fullName>
            </value>
            <value>
                <fullName>Family Law</fullName>
            </value>
            <value>
                <fullName>General Practice</fullName>
            </value>
            <value>
                <fullName>Immigration</fullName>
            </value>
            <value>
                <fullName>Litigation</fullName>
            </value>
            <value>
                <fullName>Personal Injury</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Transactional</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>