unpackaged/main/default/objects/Lead/fields/NAICS_Description__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Description__c</fullName>
    <description>Enriched by 6sense</description>
    <label>NAICS Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>